re PR middle-end/27724 (internal compiler error: no-op convert from 4 to 8 bytes in initializer)

PR middle-end/27724
        * varasm.c (output_constant): Only strip actual no-op conversions.

From-SVN: r116777